--- a/package.json
+++ b/package.json
@@ -28,18 +28,14 @@
     "@babel/node": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.10.0",
     "@babel/preset-env": "^7.10.0",
-    "@babel/preset-react": "^7.10.0",
     "@testing-library/react": "^9.4.0",
     "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.1.0",
     "cors": "^2.8.5",
     "cross-env": "^6.0.3",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-import": "^2.21.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.18.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
     "jest": "^25.1.0",
     "prettier": "^1.19.1"
   },
@@ -47,6 +43,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.18",
     "pg": "^8.2.1",
+    "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.12"
   },
   "jest": {
